--- a/index.html
+++ b/index.html
@@ -3,96 +3,100 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
-    <div class="contenedor">
+    <div class="container">
         <div class="menu">
-            <div class="logo">Diario</div>
-            <div class="nav">
-                <ul>
-                    <li><a href="">Nosotros</a></li>
-                    <li><a href="">Contacto</a></li>
-                    <li><input class="input-menu" type="text" name="buscar" placeholder="buscar..." /></li>
+            <div class="menu__logo">Diario</div>
+            
+                <ul class="menu__links">
+                    <a class="menu__links-1" href="">Nosotros</a>
+                    <a class="menu__links-2" href="">Contacto</a>
+                    <input class="menu__input" type="text" name="buscar" placeholder="buscar..." />
                 </ul>
-            </div>
+            
         </div>
-        <div class="contenido">
+
+
+        <section class="section-noticias">
+
             <div class="listad-noticias">
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias col-sm-12 col-md-6">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=1" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=2" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=3" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=4" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=5" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+                <div class="listad-noticias__noticias">
+                    <div>
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
+                    <div class="listad-noticias__cuerpo">
                         <img src="https://picsum.photos/200/300?random=6" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -100,47 +104,52 @@
                     </div>
                 </div>
             </div>
-            <div class="listado-izquierdo">
-                <div class="cabecera-listado">
-                    <h1>Nosotros </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    </p>
+        </section>
+
+        <asside class="aside">
+            <div class="listado">
+                <h1 class="listado__tittle">Nosotros </h1>
+                <p class="listado__parrafo">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                </p>
+            </div>
+            <div class="tags__box">
+                <div class="main-tags"></div>
+                <h1 class="main-tags__tittle">Tags </h1>
+                <ul class="main-tags__links">
+                    <li>Viajes</li>
+                    <li>Noticias</li>
+                    <li>Comida</li>
+                </ul>
+            </div>
+            <div class="noticias-destacadas">
+                <h1 class="noticias-destacadas__tittle">Destacados </h1>
+                <div>
+                    <h4 class="noticias-destacadas__description">Lorem ipsum dolor sit amet.</h4>
+                    <img class="noticias-destacadas__img" src="https://picsum.photos/200/200?random=7" />
                 </div>
-                <div class="tags">
-                    <h1>Tags </h1>
-                    <ul>
-                        <li>Viajes</li>
-                        <li>Noticias</li>
-                        <li>Comida</li>
-                    </ul>
+                <div>
+                    <h4 class="noticias-destacadas__description">Lorem ipsum dolor sit amet.</h4>
+                    <img class="noticias-destacadas__img" src="https://picsum.photos/200/200?random=8" />
                 </div>
-                <div class="noticias-destacadas">
-                    <h1>Destacados </h1>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=7" />
-                    </div>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=8" />
-                    </div>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=9" />
-                    </div>
+                <div>
+                    <h4 class="noticias-destacadas__description">Lorem ipsum dolor sit amet.</h4>
+                    <img class="noticias-destacadas__img" src="https://picsum.photos/200/200?random=9" />
                 </div>
             </div>
-        </div>
-        <div class="newsletter">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-            <div class="group">
+        </asside>
+
+
+        <section class="section-newsletter">
+            <h2 class="section-newsletter__tittle">Lorem ipsum dolor sit amet</h2>
+            <p class="section-newsletter__parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod</p>
+            <div class="section-newsletter__button">
                 <input type="text" name=""><button>Suscríbete</button>
             </div>
-        </div>
+        </section>
         <div class="footer">
             <p>Todos los derechos reservados</p>
         </div>
